syntax = "proto3";

package retrieve;

option go_package = "./retrieve";

// Version
message VersionReq {
}

message VersionResp {
  string Version = 1;
}

// DocumentCreate 创建文档
message DocumentCreateReq {
  string DocID = 1;
  string DocURL = 2;
}
message DocumentCreateResp {
  string DocID = 1;
}

// Search 文档检索
message SearchItem {
  string DocID = 1;
  float Score = 2;
}
message SearchReq {
  string UID = 1;
  repeated string KeyWords = 2;
  repeated string DocIDs = 3;
}
message SearchResp {
  string UID = 1;
  repeated SearchItem List = 2;
}